--- a/src/MSetExplorer/MSetInfo/MapCalcSettingsControl.xaml
+++ b/src/MSetExplorer/MSetInfo/MapCalcSettingsControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MSetExplorer"
              mc:Ignorable="d" 
-             d:DesignHeight="90" d:DesignWidth="200">
+             d:DesignHeight="110" d:DesignWidth="200">
     <Grid>
         <Grid Margin="10" x:Name="grdTop">
             <Grid.ColumnDefinitions>
@@ -27,12 +27,9 @@
             <TextBlock Text="Requests Per Job:" Grid.Row="1" Margin="0,7,0,3" Height="21" />
             <TextBox x:Name="txtRequestsPerJob" Grid.Row="1" Grid.Column="1" Margin="3" Text="{Binding RequestsPerJob}" />
 
-            <!--<TextBlock Text="Start Y:" Grid.Row="2" Margin="0,7,0,3" Height="21" />
-            <TextBox x:Name="tbStartY" Grid.Row="2" Grid.Column="1" Margin="3" />
-
-            <TextBlock Text="End Y:" Grid.Row="3" Margin="0,7,0,3" Height="21" />
-            <TextBox x:Name="tbEndY" Grid.Row="3" Grid.Column="1" Margin="3" />-->
-
+            <TextBlock Text="Available Iterations:" Grid.Row="2" Margin="0,7,0,3" Height="21" />
+            <TextBox x:Name="txtAvailableIterations" Grid.Row="2" Grid.Column="1" Margin="3" Text="{Binding TargetIterationsAvailable}"/>            
+            
             <!--<Button x:Name="Save" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top" Margin="3"
