--- a/src/MSetExplorer/Coords/MapCoordsControl.xaml
+++ b/src/MSetExplorer/Coords/MapCoordsControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MSetExplorer"
              mc:Ignorable="d" 
-             d:DesignWidth="290" d:DesignHeight="200">
+             d:DesignWidth="290" d:DesignHeight="240">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -13,7 +13,15 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0" BorderThickness="0.5" BorderBrush="Black" Margin="5,5,5,0">
+        <Border Grid.Row="0" Margin="10,5,10,0">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Id:" Height="18" />
+                <TextBox x:Name="txtId" Margin="3,0" VerticalAlignment="Center" Text="{Binding JobId}"/>
+
+            </StackPanel>
+        </Border>
+
+        <Border Grid.Row="1" BorderThickness="0.5" BorderBrush="Black" Margin="5,5,5,0">
             <Grid  Margin="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="42" />
@@ -43,17 +51,17 @@
                 <TextBlock Text="End Y:" Grid.Row="3" Margin="0,5" Height="18" />
                 <TextBox x:Name="txtEndY" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Margin="3" VerticalAlignment="Center" Text="{Binding Y2}"/>
 
-                <TextBlock Text="SPD:" Grid.Row="4" Grid.Column="0" Margin="0,5" Height="18" />
-                <TextBlock x:Name="txtSpd" Grid.Row="4" Grid.Column="1" Margin="5,3" VerticalAlignment="Center" Text="{Binding SamplePointDelta}" />
+                <TextBlock Text="SPD:" Grid.Row="4" Grid.Column="0" Margin="0,1" Height="18" />
+                <TextBlock x:Name="txtSpd" Grid.Row="4" Grid.Column="1" Margin="5,1" VerticalAlignment="Center" Text="{Binding SamplePointDelta}" />
 
-                <TextBlock Text="Exp:" Grid.Row="4" Grid.Column="2" Margin="0,5" Height="18" />
-                <TextBlock x:Name="txtSpdExp" Grid.Row="4" Grid.Column="3" Margin="5,3" VerticalAlignment="Center" Text="{Binding SamplePointDeltaExp, StringFormat={}{0:n0}}" />
+                <TextBlock Text="Exp:" Grid.Row="4" Grid.Column="2" Margin="0,1" Height="18" />
+                <TextBlock x:Name="txtSpdExp" Grid.Row="4" Grid.Column="3" Margin="5,1" VerticalAlignment="Center" Text="{Binding SamplePointDeltaExp, StringFormat={}{0:n0}}" />
 
-                <TextBlock Text="Zoom:" Grid.Row="5" Grid.Column="0" Margin="0,5" Height="18" />
-                <TextBlock x:Name="txtZoom" Grid.Row="5" Grid.Column="1" Margin="5,3" VerticalAlignment="Center" Text="{Binding Zoom, StringFormat={}{0:n0}}" />
+                <TextBlock Text="Zoom:" Grid.Row="5" Grid.Column="0" Margin="0,1" Height="18" />
+                <TextBlock x:Name="txtZoom" Grid.Row="5" Grid.Column="1" Margin="5,1" VerticalAlignment="Center" Text="{Binding Zoom, StringFormat={}{0:n0}}" />
 
-                <TextBlock Text="Precision:" Grid.Row="5" Grid.Column="2" Margin="0,5" Height="18" />
-                <TextBlock x:Name="txtPrecision" Grid.Row="5" Grid.Column="3" Margin="5,3" VerticalAlignment="Center" Text="{Binding PrecisionX, StringFormat={}{0:n0}}" />
+                <TextBlock Text="Precision:" Grid.Row="5" Grid.Column="2" Margin="0,1" Height="18" />
+                <TextBlock x:Name="txtPrecision" Grid.Row="5" Grid.Column="3" Margin="5,1" VerticalAlignment="Center" Text="{Binding PrecisionX, StringFormat={}{0:n0}}" />
 
 
 
@@ -61,9 +69,9 @@
         </Border>
 
         <!-- Collapsed  -->
-        <Border Grid.Row="5" x:Name="dispSecMapCoordsCommit" BorderThickness="0.5, 0, 0.5, 0.5" BorderBrush="Black" Visibility="Collapsed" Margin="5,0,5,0">
+        <!--<Border Grid.Row="5" x:Name="dispSecMapCoordsCommit" BorderThickness="0.5, 0, 0.5, 0.5" BorderBrush="Black" Visibility="Collapsed" Margin="5,0,5,0">
             <Button x:Name="Save" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="20" Margin="5" Content="Save" Click="SaveButton_Click" />
-        </Border>
+        </Border>-->
 
     </Grid>
 </UserControl>
