--- a/src/MSetExplorer/Coords/MapCoordsControl.xaml
+++ b/src/MSetExplorer/Coords/MapCoordsControl.xaml
@@ -15,9 +15,8 @@
 
         <Border Grid.Row="0" Margin="10,5,10,0">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Id:" Height="18" />
-                <TextBox x:Name="txtId" Margin="3,0" VerticalAlignment="Center" Text="{Binding JobId}"/>
-
+                <TextBlock Text="Job Id:" Height="18" />
+                <TextBlock x:Name="txtId" Margin="3,0" VerticalAlignment="Center" Text="{Binding JobId}"/>
             </StackPanel>
         </Border>
 
