Created Poster, PosterRecord, PosterDesignerViewModel, PosterDesignerWindow classes.

--- a/src/MSetExplorer/AppNav/AppNavWindow.xaml
+++ b/src/MSetExplorer/AppNav/AppNavWindow.xaml
@@ -5,11 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d"
-        Title="AppNavWindow" Height="150" Width="200">
+        Title="AppNavWindow" Height="200" Width="400">
     <Grid>
         <StackPanel Orientation="Vertical">
-            <Button Width="100" Height="25" Click="GoButton_Click" Margin="0,10">Go</Button>
-            <Button Width="100" Height="25" Click="LeaveButton_Click" >Leave</Button>
+            <Button Width="100" Height="25" Click="ExploreButton_Click" Margin="0,10">Explore</Button>
+            
+            <Button Width="100" Height="25" Click="DesignPosterButton_Click" Margin="0,10">Design Poster</Button>
+            
+            <Button Width="100" Height="25" Click="LeaveButton_Click" Margin="0,10" >Leave</Button>
 
         </StackPanel>
     </Grid>
