--- a/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
+++ b/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MSetExplorer.ExplorerWindow"
+﻿<Window x:Class="MSetExplorer.PosterDesignerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -176,7 +176,7 @@
             <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" >
                 <local:JobTreeControl/>
             </Border>
-            
+
         </Grid>
 
     </Grid>
